<resources>
    <string name="app_name">MUZI102</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="sp_key">muzi102</string>
    <string name="noPermissions">没有获取到主要权限，无法运行应用</string>
    <string name="phoneNumber">手机号码</string>

    <!--LoginActivity-->
    <string name="account">账号</string>
    <string name="password">登录密码</string>
    <string name="forgetPsw">忘记密码？</string>
    <string name="login_btn_login">登 录</string>
    <string name="login_btn_register">免费注册</string>
    <string name="phone">手机号码</string>
    <string name="string_2">请输入密码</string>
    <string name="login_title">账号登录</string>
    <!--RegisterActivity-->
    <string name="reginster_title">手机验证</string>
    <string name="reginster_1">国家/地区  中国大陆(+86)</string>
    <string name="reginster_2">为了您的方便登录及账号安全请填写一个手机号码完成注册</string>
    <string name="reginster_3">手机号码</string>
    <string name="reginster_4">请填写正确的手机号码</string>
    <string name="reginster_5">验证通过</string>
    <string name="reginster_text_slide">滑动验证</string>
    <string name="verify_tv_again">获取验证码</string>

    <!--VerifyActivityActivity-->
    <string name="verify_title">填写校验码</string>
    <string name="verify_content_1">我们已经发送了验证码到您的手机：</string>
    <string name="verify_phone">00000000000</string>
    <string name="verify_checkcode">验证码</string>
    <string name="verify_next">下 一 步</string>
    <string name="diolog_cancel">取 消</string>
    <string name="dialog_confirm">确 定</string>


    <!--AccountInfoActivity 设置账号信息-->
    <string name="accountInfo_title">设置账号信息</string>
    <string name="accountInfo_connent">由6-16位英文字母、数字或@.组合</string>
    <string name="accountInfo_connetn2">1.密码可用于账号登录(两种以上格式)\n2
        .推荐6-16个字符长度中文，请务包含姓名/身份证/银行卡等隐私信息，可用于登录或者找回密码使用</string>
    <string name="accountInfo_huiyuan">确认密码</string>
    <string name="accountInfo_huiyuan1">再次输入密码</string>
    <string name="accountInfo_no_paw">密码格式不正确</string>
    <string name="accountInfo_no_same">密码不一致</string>
    <string name="accountInfo_succeed">注册成功</string>
    <string name="accountInfo_able_pwd">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.</string>
    <string name="title_activity_account_center">AccountCenter</string>
    <!--账号中心-->
    <string name="accountCenter_title">快查 | 账号中心</string>

</resources>

