<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nxm.muzi102.activity.LoginActivity">


    <com.nxm.muzi102.view.TitleLayout
        android:id="@+id/login_title"
        style="@style/title"></com.nxm.muzi102.view.TitleLayout>

    <View
        android:id="@+id/view_1"
        style="@style/interval_16"
        android:layout_below="@id/login_title"></View>

    <LinearLayout
        android:id="@+id/relay1"
        style="@style/convention_item"
        android:layout_below="@id/view_1">

        <TextView
            style="@style/login_account"
            android:text="@string/account" />

        <EditText
            android:id="@+id/login_account"
            style="@style/login_account1"
            android:focusable="true"
            android:hint="@string/phone"
            android:inputType="number" />
    </LinearLayout>

    <View
        android:id="@+id/view_2"
        style="@style/interval_2"
        android:layout_below="@id/relay1"></View>

    <LinearLayout
        android:id="@+id/relay2"
        style="@style/convention_item"
        android:layout_below="@id/view_2">

        <TextView
            style="@style/login_account"
            android:text="账号密码" />

        <EditText
            android:id="@+id/login_password"
            style="@style/login_pwd"
            android:hint="@string/string_2" />
    </LinearLayout>

    <View
        android:id="@+id/view_3"
        style="@style/interval_2"
        android:layout_below="@id/relay2"></View>

    <RelativeLayout
        style="@style/re_bg"
        android:layout_below="@id/view_3">

        <TextView
            android:id="@+id/login_forgetPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/px48"
            android:layout_marginTop="@dimen/px48"
            android:text="@string/forgetPsw" />

        <Button
            android:id="@+id/login_btn_login"
            style="@style/login_btn_login"
            android:layout_marginTop="@dimen/px162"
            android:background="@color/main_theme"
            android:text="@string/login_btn_login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login_btn_register"
            style="@style/login_btn_login"
            android:layout_below="@id/login_btn_login"
            android:layout_marginTop="@dimen/px48"
            android:background="@color/gray_bg"
            android:text="@string/login_btn_register"
            android:textColor="@color/main_theme" />
    </RelativeLayout>

</RelativeLayout>
