<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nxm.muzi102.activity.VerifyActivityActivity">

    <include
        android:id="@+id/layout1"
        layout="@layout/titlebar"></include>

    <LinearLayout
        android:id="@+id/verify_line1"
        style="@style/convention_item"
        android:layout_height="@dimen/px252"
        android:layout_below="@id/layout1"
        android:background="@color/gray_bg"
        android:orientation="vertical">

        <TextView
            style="@style/line"
            android:text="@string/verify_content_1"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/px48" />

        <TextView
            style="@style/line"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:text="@string/verify_phone"
            android:textSize="@dimen/px72" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/verify_relay1"
        style="@style/convention_item"
        android:layout_below="@id/verify_line1">

        <TextView
            android:id="@+id/verify__tv_phone"
            style="@style/login_account"
            android:text="@string/reginster_3" />

        <TextView
            android:id="@+id/verify_again"
            android:layout_width="@dimen/px300"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px48"
            android:gravity="right"
            android:text="60秒后重新获取"
            android:textSize="@dimen/px36" />

        <View
            android:id="@+id/view_1"
            android:layout_width="@dimen/px3"
            android:layout_height="@dimen/px48"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/verify_again"
            android:background="@color/bg_cehngse" />

        <EditText
            android:id="@+id/verify__tv_checkcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px32"
            android:layout_toLeftOf="@id/view_1"
            android:layout_toRightOf="@id/verify__tv_phone"
            android:background="@null"
            android:hint="@string/verify_checkcode"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <View
        android:id="@+id/view_3"
        style="@style/interval_2"
        android:layout_below="@id/verify_relay1"></View>

    <RelativeLayout
        style="@style/re_bg"
        android:layout_below="@id/view_3">

        <Button
            android:id="@+id/verify_next"
            style="@style/login_btn_login"
            android:layout_marginTop="@dimen/px96"
            android:background="@color/bg_cehngse"
            android:text="@string/verify_next"
            android:textColor="@color/gray_text" />
    </RelativeLayout>
</RelativeLayout>
