<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.nxm.muzi102.view.TitleLayout
        android:id="@+id/account_c_title"
        style="@style/title" />

    <View
        android:id="@+id/view_1"
        style="@style/interval_16"
        android:layout_below="@id/account_c_title" />

    <LinearLayout
        android:id="@+id/relay1"
        style="@style/convention_item"
        android:layout_below="@id/view_1">

        <TextView
            style="@style/login_account"
            android:text="@string/account" />

        <EditText
            android:id="@+id/account_edit"
            style="@style/login_account1"
            android:focusable="true"
            android:hint="@string/phone"
            android:inputType="number" />
    </LinearLayout>

    <View
        android:id="@+id/view_3"
        style="@style/interval_2"
        android:layout_below="@id/relay1" />

    <RelativeLayout
        style="@style/re_bg"
        android:layout_below="@id/view_3">

        <RelativeLayout
            android:id="@+id/reginster_relay5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px129"
            android:layout_marginTop="@dimen/px16">

            <com.nxm.muzi102.view.VerificationSeekBar
                android:id="@+id/account_c_seekbar"
                style="@style/v_SeekBar" />

            <TextView
                android:id="@+id/account_text_slide"
                style="@style/wh_ww"
                android:layout_centerInParent="true"
                android:text="@string/reginster_text_slide" />
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>