<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nxm.muzi102.activity.RegisterActivity">

    <include
        android:id="@+id/reginster_layout1"
        layout="@layout/titlebar"></include>

    <RelativeLayout
        android:id="@+id/reginster_relay1"
        style="@style/convention_item"
        android:layout_below="@id/reginster_layout1"
        android:background="@color/gray_bg">

        <TextView
            style="@style/login_account"
            android:text="@string/reginster_2"
            android:textSize="@dimen/px36" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reginster_relay2"
        style="@style/convention_item"
        android:layout_below="@id/reginster_relay1">

        <TextView
            style="@style/login_account"
            android:text="@string/reginster_1" />
    </RelativeLayout>

    <View
        android:id="@+id/view_2"
        style="@style/interval_2"
        android:layout_below="@id/reginster_relay2"></View>

    <RelativeLayout
        android:id="@+id/reginster_relay3"
        style="@style/convention_item"
        android:layout_below="@id/view_2">

        <TextView
            android:id="@+id/login_tv_account"
            style="@style/login_account"
            android:text="@string/reginster_3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px32"
            android:layout_toRightOf="@id/login_tv_account"
            android:background="@null"
            android:hint="手机号码"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <View
        android:id="@+id/view_3"
        style="@style/interval_2"
        android:layout_below="@id/reginster_relay3"></View>

    <RelativeLayout
        android:id="@+id/reginster_relay4"
        style="@style/re_bg"
        android:layout_below="@id/view_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/px48">

            <TextView
                style="@style/wh_ww"
                android:text="继续操作即视为同意" />

            <TextView
                android:id="@+id/reginster_tv_agreement"
                style="@style/wh_ww"
                android:text="muzi102服务协议"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                style="@style/wh_ww"
                android:text="且" />

            <TextView
                style="@style/wh_ww"
                android:text="隐私保密协议"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
